# data-science-portfolio

Projeto_Dashboard_Inteligencia_Vendas_Previsao/: .gitignore  README.md  app.py  requirements.txt
eda-airbnb-analysis/: .gitignore  README.md  requirements.txt
eda-algoritmo-randon-forest/: Readme.md
eda-algoritmo-regressao-linear/: Readme.md
eda-algoritmo-regressao-logistica/: Readme.md
eda-covid-analysis/: .gitignore  README.md  requirements.txt
eda-ifood/: README.md
pipeline_analise_sentimento_mercado/: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
pipeline_analise_sentimento_mercado/config/: .env  airflow.cfg
pipeline_analise_sentimento_mercado/dags/: dag_ecommerce_olist.py
pipeline_analise_sentimento_mercado/notebooks/: exploracao.ipynb
pipeline_analise_sentimento_mercado/src/: extract.py  load.py  transform.py
projeto-leads-marketing/: README.md  docker-compose.yaml  main.py  pyproject.toml
projeto-leads-marketing/dags/: dag_leads_marketing.py
projeto-leads-marketing/src/: process_leads.py
projeto_e-Commerce-logistics/: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
projeto_e-Commerce-logistics/dbt_project/: .user.yml  dbt_project.yml  profiles.yml  requirements.txt
projeto_e-Commerce-logistics/dbt_project/models/gold/: avg_ticket_cliente.sql  fct_vendas_categoria.sql  fct_vendas_por_produto.sql  schema.yml
projeto_e-Commerce-logistics/dbt_project/models/staging/: stg_vendas.sql
projeto_e-Commerce-logistics/scripts/: ingest_to_bronze.py  transform_to_silver.py
(+200 files in other folders)
